# squoosh-api

./: .env.example  .gitignore  .railwayignore  Dockerfile  README.md  chromedriver_config.py  main.py  pyproject.toml  railway.json  requirements.txt  run_local.py  test_api.py
models/: schemas.py
routes/: compression.py  health.py
services/: squoosh_service.py
