[poetry]
name = "squoosh-api"
version = "0.1.0"
description = "API for image compression using Squoosh"
authors = [
    {name = "Daniel Dans",email = "ddansabelenda@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"

dependencies = [
    "fastapi (>=0.115.0,<0.116.0)",
    "uvicorn[standard] (>=0.30.0,<0.31.0)",
    "selenium (>=4.25.0,<4.26.0)",
    "webdriver-manager (>=4.0.0,<5.0.0)",
    "pillow (>=10.4.0,<11.0.0)",
    "python-multipart (>=0.0.9,<0.1.0)"
]


[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"