[tool.poetry]
name = "squoosh-api"
version = "0.1.0"
description = "API for image compression using Squoosh"
authors = ["Daniel Dans <ddansabelenda@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
fastapi = ">=0.115.0,<0.116.0"
uvicorn = {extras = ["standard"], version = ">=0.30.0,<0.31.0"}
pydantic = "^2.0.0"
pillow = ">=10.4.0,<11.0.0"
python-multipart = ">=0.0.9,<0.1.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"